# MIDI-Router

./: .gitignore  AKAI APC40 MkII - Remap.xlsx  Build&Copy.cmd  Build&Install.cmd  Cargo.toml  LICENSE  README.md  config.toml  dev.install.cmd  example.config.toml  gen-installer.cmd  install-readme.txt  installer.iss
configs/akai-apc40-mk2/: AKAI APC40 MkII - Color.xlsx  akai-apc40-mk2.config.toml
installer/: dev.install.cmd  gen-installer.cmd  installer.iss
src/: main.rs  tui.rs
src/api/: test.rs
src/router/: input_connection.rs  led_controller.rs  mapping_config.rs  midi_connection.rs  midi_handler.rs  mod.rs  output_connection.rs  state_manager.rs
src/utils/: config.rs  helper.rs  mod.rs  threads.rs  tui.rs
