[package]
name = "midi-router"
authors = ["David Frings <dev@davidfrings.dev> (https://DavidFrings.dev)"]
version = "0.2.6"
description = "MIDI Router for APC40 MK2 to route banks"
license = "MPL-2.0"
rust-version = "1.87"
edition = "2024"

[dependencies]
midir = "^0.10"
wmidi = "^4.0"
anyhow = "^1.0"
log = "^0.4"
env_logger = "^0.11"
reqwest = { version = "^0.12", features = ["json"] }
serde_json = "^1.0"
tokio = { version = "^1.48", features = ["rt", "rt-multi-thread", "macros"] }
ratatui = "^0.29"
crossterm = "^0.29"
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.9"
actix-web = "^4.11"